--- a/Python/Pandas/01-Installation/Pandas Demo.ipynb
+++ b/Python/Pandas/01-Installation/Pandas Demo.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/survey_results_public.csv')"
+    "df = pd.read_csv('../data/survey_results_public.csv')"
    ]
   },
   {
@@ -2100,7 +2100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_GPU_cuda",
    "language": "python",
    "name": "python3"
   },
@@ -2114,7 +2114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
