“much deeper understanding of git and scm”

--- a/Transformers_LLM/1_Transformers-1.ipynb
+++ b/Transformers_LLM/1_Transformers-1.ipynb
@@ -18,10 +18,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "13805b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\zhen-\\\\Documents\\\\Code\\\\Python_Scripts\\\\code_snippets\\\\Transformers_LLM'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "249e036c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\zhen-\\anaconda3\\envs\\torch_cuda\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from torch import nn\n",
     "from transformers import AutoConfig \n",
@@ -30,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d4bc924e",
    "metadata": {},
    "outputs": [
@@ -62,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b8b1c050",
    "metadata": {},
    "outputs": [],
@@ -73,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cac2e663",
    "metadata": {},
    "outputs": [
@@ -109,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3091a040",
    "metadata": {},
    "outputs": [
@@ -138,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "91dc82a2",
    "metadata": {},
    "outputs": [
@@ -156,6 +186,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "459622d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 5, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(attn_outputs.size())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "61e8d22c",
    "metadata": {},
@@ -165,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "35b312a6",
    "metadata": {},
    "outputs": [],
@@ -244,8 +293,8 @@
    "id": "2b0939bc",
    "metadata": {},
    "source": [
-    "Ctrl+ M， 下一个独立 M ， 改成markdow\n",
     "首先实现一个注意力头：每个头都会初始化三个独立的线性层，负责将序列映射到尺寸为 [batch_size, seq_len, head_dim] 的张量，其中 head_dim 是映射到的向量维度。\n",
+    "\n",
     "最后只需要拼接多个注意力头的输出就可以构建出 Multi-head Attention 层了（这里在拼接后还通过一个线性变换来生成最终的输出张量）："
    ]
   },
@@ -273,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "314a1c77",
    "metadata": {},
    "outputs": [],
@@ -299,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "1ec2477b",
    "metadata": {},
    "outputs": [
@@ -344,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "ae8f714b",
    "metadata": {},
    "outputs": [],
@@ -370,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "28d9bca2",
    "metadata": {},
    "outputs": [
@@ -390,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "c46bee7e",
    "metadata": {},
    "outputs": [],
@@ -418,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "c8ae20f0",
    "metadata": {},
    "outputs": [
@@ -441,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "9a8abc88",
    "metadata": {},
    "outputs": [
@@ -489,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "57dd21ef",
    "metadata": {},
    "outputs": [],
@@ -533,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "89a12bab",
    "metadata": {},
    "outputs": [
@@ -561,22 +610,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "0ca33625",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[29.4475,    -inf,    -inf,    -inf,    -inf],\n",
-       "         [-0.5265, 27.9095,    -inf,    -inf,    -inf],\n",
-       "         [ 0.4564,  0.9879, 25.2901,    -inf,    -inf],\n",
-       "         [ 2.1639, -0.3549,  1.2562, 25.6501,    -inf],\n",
-       "         [-1.4619,  1.0373, -1.2650,  1.7290, 28.4489]]],\n",
+       "tensor([[[25.8183,    -inf,    -inf,    -inf,    -inf],\n",
+       "         [ 1.7578, 24.9309,    -inf,    -inf,    -inf],\n",
+       "         [ 0.8195, -1.0490, 25.2169,    -inf,    -inf],\n",
+       "         [-0.3305,  1.2924, -0.5281, 28.2054,    -inf],\n",
+       "         [ 0.1386,  0.8815,  0.5444,  0.4177, 29.1536]]],\n",
        "       grad_fn=<MaskedFillBackward0>)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +639,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_GPU_cuda",
+   "display_name": "torch_cuda",
    "language": "python",
    "name": "python3"
   },
@@ -604,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
