--- a/Transformers_LLM/Sheng Xu/local_LLM/local_LLM1.ipynb
+++ b/Transformers_LLM/Sheng Xu/local_LLM/local_LLM1.ipynb
@@ -522,37 +522,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "2f83992f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import login\n",
+    "#login(new_session=False) #你自己執行時請把這行改成\n",
+    "#login(token=\"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\", new_session=False)\n",
+    "login(token=\"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\", new_session=False)  # ← 这是 HF token"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "559f2b58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import login\n",
-    "\n",
-    "login(token=\"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\")  # ← 这是 HF token\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "9852da2a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mhf\u001b[49m-auth-login\n",
-      "\u001b[31mNameError\u001b[39m: name 'hf' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "hf-auth-login"
+    "# from huggingface_hub import login\n",
+    "# login(token=\"hhf_TNZNLMjRWiAGzIqITJshdSfIgHZZaSOukS\")  # ← 这是 HF token"
    ]
   },
   {
