--- a/Transformers_LLM/NTU_Hongyi_Lee/第二講：AI_使用工具概念介紹_updated.ipynb
+++ b/Transformers_LLM/NTU_Hongyi_Lee/第二講：AI_使用工具概念介紹_updated.ipynb
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -498,10 +498,10 @@
         }
       ],
       "source": [
-        "pipe = pipeline(\n",
-        "    \"text-generation\",\n",
-        "   \"google/gemma-3-4b-it\"\n",
-        ")\n",
+        "# pipe = pipeline(\n",
+        "#     \"text-generation\",\n",
+        "#    \"google/gemma-3-4b-it\"\n",
+        "# )\n",
         "# C:\\Users\\zhen-\\.cache\\huggingface\\hub\\models--google--gemma-3-4b-it"
       ]
     },
