--- a/Transformers_LLM/Sheng Xu/3_Model_and_Token.ipynb
+++ b/Transformers_LLM/Sheng Xu/3_Model_and_Token.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "73921365",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "91cdd28c",
    "metadata": {},
    "outputs": [
@@ -429,9 +429,8 @@
     }
    ],
    "source": [
-    "\n",
-    "# 同样地，在大部分情况下我们都应该使用 AutoTokenizer 来加载分词器：\n",
-    "from transformers import AutoTokenizer\n",
+    "# 同样地，我们可以用 AutoModelForSequenceClassification 来加载预训练模型：\n",
+    "from transformers import AutoModelForSequenceClassification\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
     "tokenizer.save_pretrained(\"./models/bert-base-cased/\")"
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "7b2b3abf",
    "metadata": {},
    "outputs": [
@@ -479,14 +478,12 @@
     "sequence = \"Using a Transformer network is simple\"\n",
     "tokens = tokenizer.tokenize(sequence)\n",
     "\n",
-    "print(tokens)\n",
-    "\n",
-    "\n"
+    "print(tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "1caafdbd",
    "metadata": {},
    "outputs": [
@@ -499,7 +496,6 @@
     }
    ],
    "source": [
-    "\n",
     "#'using', 'a', 'transform', '##er', 'network', 'is', 'simple']\n",
     "#可以看到，BERT 分词器采用的是子词切分策略，它会不断切分词语直到获得词表中的 token，例如 “transformer” 会被切分为 “transform” 和 “##er”。\n",
     "\n",
@@ -512,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "26fc8cc6",
    "metadata": {},
    "outputs": [
@@ -526,7 +522,6 @@
    ],
    "source": [
     "# 还可以通过 encode() 函数将这两个步骤合并，并且 encode() 会自动添加模型需要的特殊 token，例如 BERT 分词器会分别在序列的首尾添加 \n",
-    "#  和 \n",
     "\n",
     "from transformers import AutoTokenizer\n",
     "\n",
@@ -540,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "00aac8b0",
    "metadata": {},
    "outputs": [
@@ -569,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bdd845f4",
    "metadata": {},
    "outputs": [
@@ -586,7 +581,6 @@
     }
    ],
    "source": [
-    "\n",
     "# 现实场景中，我们往往会同时处理多段文本，而且模型也只接受批 (batch) 数据作为输入，即使只有一段文本，也需要将它组成一个只包含一个样本的 batch，例如：\n",
     "\n",
     "import torch\n",
@@ -600,7 +594,6 @@
     "\n",
     "tokens = tokenizer.tokenize(sequence)\n",
     "ids = tokenizer.convert_tokens_to_ids(tokens)\n",
-    "# input_ids = torch.tensor(ids), This line will fail.\n",
     "input_ids = torch.tensor([ids])\n",
     "print(\"Input IDs:\\n\", input_ids)\n",
     "\n",
@@ -610,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "a8b8b241",
    "metadata": {},
    "outputs": [
@@ -638,10 +631,10 @@
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
     "\n",
     "checkpoint = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(checkpoint)\n",
+    "tokenizer  = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "model      = AutoModelForSequenceClassification.from_pretrained(checkpoint)\n",
     "\n",
-    "sequence = \"I've been waiting for a HuggingFace course my whole life.\"\n",
+    "sequence   = \"I've been waiting for a HuggingFace course my whole life.\"\n",
     "\n",
     "tokenized_inputs = tokenizer(sequence, return_tensors=\"pt\")\n",
     "print(\"Inputs Keys:\\n\", tokenized_inputs.keys())\n",
@@ -735,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "17da8ab6",
    "metadata": {},
    "outputs": [
@@ -807,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "b90f70b4",
    "metadata": {},
    "outputs": [
@@ -838,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "72789819",
    "metadata": {},
    "outputs": [
@@ -930,8 +923,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3c172f2",
+   "metadata": {},
+   "source": [
+    "分词器还可以通过 return_tensors 参数指定返回的张量格式：\n",
+    "* 设为 pt 则返回 PyTorch 张量；\n",
+    "* 设为 tf 则返回 TensorFlow 张量，\n",
+    "* 设为 np 则返回 NumPy 数组。例如："
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "6d6ff3e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_ids': tensor([[  101,  1045,  1005,  2310,  2042,  3403,  2005,  1037, 17662, 12172,\n",
+      "          2607,  2026,  2878,  2166,  1012,   102],\n",
+      "        [  101,  2061,  2031,  1045,   999,   102,     0,     0,     0,     0,\n",
+      "             0,     0,     0,     0,     0,     0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])}\n",
+      "{'input_ids': array([[  101,  1045,  1005,  2310,  2042,  3403,  2005,  1037, 17662,\n",
+      "        12172,  2607,  2026,  2878,  2166,  1012,   102],\n",
+      "       [  101,  2061,  2031,  1045,   999,   102,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0,     0]]), 'attention_mask': array([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "       [1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "checkpoint = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "\n",
+    "sequences = [\n",
+    "    \"I've been waiting for a HuggingFace course my whole life.\", \n",
+    "    \"So have I!\"\n",
+    "]\n",
+    "\n",
+    "model_inputs = tokenizer(sequences, padding=True, return_tensors=\"pt\") # PyTorch tensors\n",
+    "print(model_inputs)\n",
+    "\n",
+    "model_inputs = tokenizer(sequences, padding=True, return_tensors=\"np\") # NumPy arrays\n",
+    "print(model_inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89518e5c",
+   "metadata": {},
+   "source": [
+    "编码句子对\n",
+    "除了对单段文本进行编码以外（batch 只是并行地编码多个单段文本），对于 BERT 等包含“句子对”预训练任务的模型，它们的分词器都支持对“句子对”进行编码，例如：\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cafcee2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_ids': [101, 2023, 2003, 1996, 2034, 6251, 1012, 102, 2023, 2003, 1996, 2117, 2028, 1012, 102], 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}\n",
+      "['[CLS]', 'this', 'is', 'the', 'first', 'sentence', '.', '[SEP]', 'this', 'is', 'the', 'second', 'one', '.', '[SEP]']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "checkpoint = \"bert-base-uncased\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "\n",
+    "inputs = tokenizer(\"This is the first sentence.\", \"This is the second one.\")\n",
+    "print(inputs)\n",
+    "\n",
+    "tokens = tokenizer.convert_ids_to_tokens(inputs[\"input_ids\"])\n",
+    "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7562e088",
+   "metadata": {},
+   "source": [
+    "+ [CLS] (Classification Token) \n",
+    "+ [SEP] (Separator Token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fff68e3",
+   "metadata": {},
+   "source": [
+    "5.4 添加 Token\n",
+    "实际操作中，我们还经常会遇到输入中需要包含特殊标记符的情况，例如使用 \n",
+    " 和 \n",
+    " 标记出文本中的实体。由于这些自定义 token 并不在预训练模型原来的词表中，因此直接运用分词器处理就会出现问题。\n",
+    "\n",
+    "例如直接使用 BERT 分词器处理下面的句子：\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0443f782",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['two', '[', 'en', '##t', '_', 'start', ']', 'cars', '[', 'en', '##t', '_', 'end', ']', 'collided', 'in', 'a', '[', 'en', '##t', '_', 'start', ']', 'tunnel', '[', 'en', '##t', '_', 'end', ']', 'this', 'morning', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "checkpoint = \"bert-base-uncased\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "\n",
+    "sentence = 'Two [ENT_START] cars [ENT_END] collided in a [ENT_START] tunnel [ENT_END] this morning.'\n",
+    "print(tokenizer.tokenize(sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "8dabf8e5",
    "metadata": {},
    "outputs": [
@@ -994,12 +1124,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1929278c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "初始化为已有 token 的值\n",
+    "更为高级的做法是根据新添加 token 的语义来进行初始化。例如将值初始化为 token 语义描述中所有 token 的平均值，假设新 token \n",
+    " 的语义描述为 \n",
+    "，那么初始化 \n",
+    " 的 embedding 为： \n",
+    " \n",
+    "\n",
+    "这里 \n",
+    " 表示预训练模型的 embedding 矩阵。对于上面的例子，我们可以分别为 \n",
+    " 和 \n",
+    " 编写对应的描述，然后再对它们的值进行初始化：\n"
+   ]
   }
  ],
  "metadata": {
