--- a/plotting/ploting_18_types.ipynb
+++ b/plotting/ploting_18_types.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -c conda-forge seaborn -y "
+    "# %pip install seaborn  "
    ]
   },
   {
